# gnome-shell-extension-spruce

./: .gitignore  ATTRIBUTIONS.md  CODE_OF_CONDUCT.md  README.md  convenience.js  extension.js  meson.build  meson_options.txt  metadata.json  statusMenuItem.js
data/: metadata.json.in  org.gnome.shell.extensions.spruce.gresource.xml  org.gnome.shell.extensions.spruce.gschema.xml
meson/: package.sh  post-install.sh
po/: en_US.po  meson.build  org.gnome.shell.extensions.spruce.pot
schemas/: gschemas.compiled  org.gnome.shell.extensions.spruce.gschema.xml
spruce@paysonwallach.com/: convenience.js  metadata.json  statusMenuItem.js
spruce@paysonwallach.com/locale/en_US/LC_MESSAGES/: org.gnome.shell.extensions.spruce.po
spruce@paysonwallach.com/schemas/: org.gnome.shell.extensions.spruce.gschema.xml
src/: convenience.js  extension.js  logging.js  nextOrPreviousScreen.js  nextOrPreviousThird.js  screenDetector.js  statusMenuItem.js  windowActions.js  windowResizer.js  windowTransformHandler.js  windowTransformHelpers.js
src/commands/: bottomEdgeWindowCalculation.js  bottomHalfWindowCalculation.js  centerWindowCalculation.js  fullscreenWindowCalculation.js  largerWindowCalculation.js  leftEdgeWindowCalculation.js  leftHalfWindowCalculation.js  lowerLeftCornerWindowCalculation.js  lowerLeftWindowCalculation.js  lowerRightCornerWindowCalculation.js  lowerRightWindowCalculation.js  nextDisplayCalculation.js  nextThirdWindowCalculation.js  previousDisplayCalculation.js  previousThirdWindowCalculation.js  rightEdgeWindowCalculation.js  rightHalfWindowCalculation.js  smallerWindowCalculation.js  topEdgeWindowCalculation.js  topHalfWindowCalculation.js  upperLeftCornerWindowCalculation.js  upperLeftWindowCalculation.js  upperRightCornerWindowCalculation.js  upperRightWindowCalculation.js
tools/: generate-locales.sh  package.sh
